--- a/site/comment.html
+++ b/site/comment.html
@@ -13,7 +13,7 @@
 	<div>
 		<h1>COMMENTS:</h1>
 		<ol>
-			<li>Great tool developed by company with best user interface of tools and good services I recommended it</li>
+			<li>Great tool developed by company with best user interface of tools and good services I recommended it.</li>
 
 			<li>Excellent software, with easy user interface of people who work daily with checks,I recommended it.</li>
 
@@ -21,7 +21,7 @@
 
 			<li>I have tried several programs of this type and without a doubt this has been the best and I recommended it.</li>
 
-			<li>The page is excellent, It has good information. . It will print the check in professional way. it is the best service. I recommended it </li>
+			<li>The page is excellent, It has good information. It will print the check in professional way. it is the best service. I recommended it </li>
 
 			<li>This information helped me a lot, for a long time I needed a software for printing checks and I think its best platform. </li>
 
@@ -29,7 +29,7 @@
 
 			<li>Absolutely brilliant and awesome software With lot of unique features for check printing and recommended It. </li>
 
-			<li>Amazing software for Checks, built by a group of brilliant people who knows what i am looking for made creating checks a fly. Best Check Printing Software of the Nation. </li>
+			<li>Amazing software for Checks, built by a group of brilliant people who knows what I am looking for made creating checks a fly. Best Check Printing Software of the Nation. </li>
 
 			<li>This software gives us the option to create Electronic check which is faster and make check solution easier in our needful field.</li>
 		</ol>
