--- a/site/comment.html
+++ b/site/comment.html
@@ -21,7 +21,7 @@
 
 			<li>I have tried several programs of this type and without a doubt this has been the best and I recommended it.</li>
 
-			<li>The page is excellent, It has good information. It will print the check in professional way. it is the best service. I recommended it </li>
+			<li>The page is excellent, It has good information. It will print the check in professional way. It is the best service, I recommended it </li>
 
 			<li>This information helped me a lot, for a long time I needed a software for printing checks and I think its best platform. </li>
 
